--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 
 [type="file"]::-webkit-file-upload-button {
   background: #1976d2;
-  border: 2px solid #1976d2;
+  border: 1px solid #1976d2;
   border-radius: 4px;
   color: #fff;
   cursor: pointer;
@@ -23,7 +23,7 @@ code {
   outline: none;
   padding: 10px 25px;
   text-transform: uppercase;
-  transition: all 1s ease;
+  transition: all 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms, color 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
 }
 
 [type="file"]::-webkit-file-upload-button:hover {
